Add generator, fix locals, form stuff

--- a/compass/stylesheets/bhm/admin/_listing.sass
+++ b/compass/stylesheets/bhm/admin/_listing.sass
@@ -13,7 +13,7 @@
         color: white
         background: #555555
         +linear-gradient(color-stops(#555555, #777777), bottom)
-        font-family: "Helvetica Neue", Arial, Helvetica, sans-serif !default
+        font-family: "Helvetica Neue", Arial, Helvetica, sans-serif
     tbody
       tr.empty
         background: #eeeeee
