--- a/compass/stylesheets/bhm/admin/_header.sass
+++ b/compass/stylesheets/bhm/admin/_header.sass
@@ -26,7 +26,7 @@ header
     a
       vertical-align: middle
       font-size: 1.25em
-      font-family: "Helvetica Neue", Arial, Helvetica, sans-serif !default
+      font-family: "Helvetica Neue", Arial, Helvetica, sans-serif
       +link-colors(white, #ee6673)
       +hover-link
     a#view-site-link
