Add errors to views

--- a/app/views/admin/shared/_edit_base.html.haml
+++ b/app/views/admin/shared/_edit_base.html.haml
@@ -1,5 +1,7 @@
 %h2.title== Editing #{current_resource_name}
 
+= humanized_errors_on resource
+
 = semantic_form_for resource, :url => resource_url, :method => :put do |form|
   = render :partial => 'form', :object => form
   = form.buttons do
