--- a/app/views/admin/shared/_new_base.html.haml
+++ b/app/views/admin/shared/_new_base.html.haml
@@ -1,5 +1,7 @@
 %h2.title== Add a new #{current_resource_name}
 
+= humanized_errors_on resource
+
 = semantic_form_for resource, :url => collection_url do |form|
   = render :partial => 'form', :object => form
   = form.buttons do
