--- a/compass/stylesheets/bhm/admin/_header.sass
+++ b/compass/stylesheets/bhm/admin/_header.sass
@@ -21,8 +21,9 @@ header
   padding: 0
   margin: 0.8em 1.5em 0 0
   li
-    +inline-list
-    margin: 0 0 0 1.5em
+    padding: 0px
+    display: inline
+    margin: 0 0 0 1em !important
     a
       vertical-align: middle
       font-size: 1.25em
