--- a/lib/generators/bhm_admin/resource/templates/index.html.haml
+++ b/lib/generators/bhm_admin/resource/templates/index.html.haml
@@ -1,4 +1,4 @@
-%h2.title== Viewing all #{current_resource_name.pluralize}
+%h2.title Viewing all #{current_resource_name.pluralize}
 
 - column_names = default_collection_columns
 
@@ -17,5 +17,5 @@
           %td=vwd r.try(column)
         %td.actions= individual_resource_links r
     = empty_row_for_collection column_names.size
-        
+
 = will_paginate collection
