--- a/lib/generators/bhm_admin/resource/templates/show.html.haml
+++ b/lib/generators/bhm_admin/resource/templates/show.html.haml
@@ -1,4 +1,4 @@
-%h2.title== Viewing #{current_resource_name}
+%h2.title Viewing #{current_resource_name}
 
 = show_for resource do |r|
   - (resource_class.column_names - [:created_at, :updated_at]).each do |column|
