Update the sass stylesheet

--- a/compass/stylesheets/bhm/admin/_formtastic.sass
+++ b/compass/stylesheets/bhm/admin/_formtastic.sass
@@ -124,6 +124,8 @@ form.formtastic
         float: left
         width: auto
         margin: 0 .3em 0 0
+      &.date fieldset, &.time fieldset, &.datetime fieldset
+        overflow: visible
       &.date fieldset ol li label, &.time fieldset ol li label, &.datetime fieldset ol li label
         display: none
       &.date fieldset ol li label input, &.time fieldset ol li label input, &.datetime fieldset ol li label input
