Fix the size for form fields

--- a/compass/stylesheets/bhm/admin/_formtastic.sass
+++ b/compass/stylesheets/bhm/admin/_formtastic.sass
@@ -92,9 +92,8 @@ form.formtastic
           display: list-item
       &.string input, &.password input, &.numeric input, &.email input, &.url input, &.phone input, &.search input
         width: 72%
-      &.string input[size], &.password input[size], &.numeric input[size], &.email input[size], &.url input[size], &.phone input[size], &.search input[size], &.datetime_picker input[size], &.date_picker input[size]
-        width: auto
-        max-width: 72%
+      &.string input, &.password input, &.numeric input, &.email input, &.url input, &.phone input, &.search input, &.datetime_picker input, &.date_picker input
+        width: 72%
       &.text textarea
         width: 72%
         &[cols]
