Add in html5 reset, bump version and misc. tweaks

--- a/compass/stylesheets/bhm/admin/_base.sass
+++ b/compass/stylesheets/bhm/admin/_base.sass
@@ -8,7 +8,7 @@ $fb-image-path: unquote("url(/images/button_bg.png)")
 @import fancy-buttons
 
 +global-reset
-
++reset-html5
 +text
 
 @import bhm/admin/util
