--- a/compass/stylesheets/bhm/admin/_header.sass
+++ b/compass/stylesheets/bhm/admin/_header.sass
@@ -1,5 +1,5 @@
 header
-  background: #333333
+  background-color: #333333
   margin: 0 0 1.5em 0
   +border-bottom-radius(0.5em)
   +box-shadow(#777777, 0, 0, 0.25em)
