Add extra helpers to control the page layout

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -14,7 +14,7 @@
     = yield :extra_head
 
   %body
-    #container
+    #container{:class => container_classes_css}
       %header= render :partial => 'admin/shared/header'
       = flash_messages :alert, :notice
 
