--- a/compass/stylesheets/bhm/admin/_grid.sass
+++ b/compass/stylesheets/bhm/admin/_grid.sass
@@ -19,3 +19,9 @@ $ninesixty-columns: 24
 
 footer, #flash-messages
   +grid-width(24)
+
+#container.full-width
+  #content
+    +grid-width(24)
+  #sidebar
+    display: none
