First set of bhm-admin refactoring

--- a/app/assets/stylesheets/bhm/admin/_forms.sass
+++ b/app/assets/stylesheets/bhm/admin/_forms.sass
@@ -16,7 +16,7 @@ form.formtastic
   fieldset.buttons
     ol li
       button
-        +fancy-button(#196e27, 16px)
+       // TODO: Implement GitHub Style add button
   span.cke_skin_kama
     margin-left: 28%
   p.actions
