--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,30 +1,2 @@
-!!! 5
-%html{:lang => "en", :dir => "ltr"}
-  %head
-    %title #{BHM::Admin.site_name} - Admin Area
-
-    / Stylesheets
-    = include_stylesheets(:admin, :media => 'screen, projection')
-
-    / Javascripts
-    /[if IE]
-      = javascript_include_tag "http://html5shiv.googlecode.com/svn/trunk/html5.js"
-    = include_javascripts(:admin)
-    = csrf_meta_tag
-    = yield :extra_head
-
-  %body
-    #container{:class => container_classes_css}
-      %header= render :partial => 'admin/shared/header'
-      = flash_messages :alert, :notice
-
-      %section#content-container
-        %section#content= yield
-        %section#sidebar
-          - sidebar_content = content_for(:sidebar)
-          = sidebar_content.present? ? sidebar_content : render(:partial => 'admin/shared/sidebar')
-
-      %footer
-        = render :partial => 'admin/shared/footer'
-        = yield :page_bottom
-        = yield :extra_footer
+= extends :bhm_admin do
+  = yield
